k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solidstudy-service
spec:
  type: NodePort
  selector:
    app: solidstudy
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
